--- a/index.html
+++ b/index.html
@@ -1,59 +1,51 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>solnyx Apps Portfolio</title>
-  <link rel="stylesheet" href="style.css" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Solenyx Apps</title>
+    <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+    <header>
+        <h1>Willkommen bei Solenyx Apps</h1>
+        <nav>
+            <ul>
+                <li><a href="#apps">Apps</a></li>
+                <li><a href="#datenschutz">Datenschutz</a></li>
+            </ul>
+        </nav>
+    </header>
 
-  <header>
-    <h1>solnyx Apps</h1>
-    <p>Willkommen! Hier findest du meine Android-Apps aus dem Google Play Store.</p>
-  </header>
+    <main>
+        <section id="apps">
+            <h2>Meine Google Play Apps</h2>
+            <ul class="app-list">
+                <li>
+                    <a href="https://play.google.com/store/apps/details?id=de.solnyx.app1">
+                        <img src="app1-icon.png" alt="App 1 Icon" class="app-icon" />
+                        App 1
+                    </a>
+                    <p>Beschreibung der App 1</p>
+                </li>
+                <li>
+                    <a href="https://play.google.com/store/apps/details?id=de.solnyx.app2">
+                        <img src="app2-icon.png" alt="App 2 Icon" class="app-icon" />
+                        App 2
+                    </a>
+                    <p>Beschreibung der App 2</p>
+                </li>
+            </ul>
+        </section>
 
-  <main>
-    <section class="app-list">
+        <section id="datenschutz">
+            <h2>Datenschutzerklärung</h2>
+            <p>Hier steht deine Datenschutzerklärung. Bitte ergänze den Text entsprechend.</p>
+        </section>
+    </main>
 
-      <article class="app-card">
-        <img src="app1-screenshot.png" alt="Screenshot App 1" />
-        <h2>App Name 1</h2>
-        <p>Kurze Beschreibung von App 1: Was macht sie? Für wen ist sie?</p>
-        <a href="https://play.google.com/store/apps/details?id=deine.app1.id" target="_blank" class="btn">Zum Play Store</a>
-      </article>
-
-      <article class="app-card">
-        <img src="app2-screenshot.png" alt="Screenshot App 2" />
-        <h2>App Name 2</h2>
-        <p>Kurze Beschreibung von App 2: Features, Nutzen, Highlights.</p>
-        <a href="https://play.google.com/store/apps/details?id=deine.app2.id" target="_blank" class="btn">Zum Play Store</a>
-      </article>
-
-      <!-- Weitere Apps hier hinzufügen -->
-
-    </section>
-
-    <section class="contact">
-      <h2>Kontakt</h2>
-      <p>Bei Fragen oder Feedback schreib mir gerne eine E-Mail: <a href="mailto:deine.email@domain.com">deine.email@domain.com</a></p>
-    </section>
-    <section class="datenschutz">
-  <h2>Datenschutzerklärung</h2>
-  <p>
-    Diese Website verwendet keine Cookies und sammelt keine personenbezogenen Daten.
-    Sämtliche Links zu Google Play Store führen direkt zu Google, ohne dass hier Daten erhoben werden.
-    Für den Schutz deiner Daten auf den verlinkten Seiten ist Google verantwortlich.
-  </p>
-  <p>
-    Solltest du Fragen zum Datenschutz haben, kannst du uns gerne per E-Mail kontaktieren.
-  </p>
-</section>
-  </main>
-
-  <footer>
-    <p>© 2025 solnyx | Alle Rechte vorbehalten</p>
-  </footer>
-
+    <footer>
+        <p>&copy; 2025 Solenyx</p>
+    </footer>
 </body>
 </html>
