--- a/index.html
+++ b/index.html
@@ -38,10 +38,30 @@
             </ul>
         </section>
 
-        <section id="datenschutz">
-            <h2>Datenschutzerklärung</h2>
-            <p>Hier steht deine Datenschutzerklärung. Bitte ergänze den Text entsprechend.</p>
-        </section>
+<section id="datenschutz">
+  <h2>Datenschutzerklärung</h2>
+  <p>Wir nehmen den Schutz deiner persönlichen Daten sehr ernst und behandeln deine personenbezogenen Daten vertraulich und entsprechend der gesetzlichen Datenschutzvorschriften sowie dieser Datenschutzerklärung.</p>
+
+  <h3>Erhebung und Verarbeitung von Daten</h3>
+  <p>Beim Besuch unserer Website werden automatisch Informationen allgemeiner Natur erfasst. Diese Informationen (z. B. Browsertyp, verwendetes Betriebssystem, IP-Adresse, Uhrzeit des Zugriffs) werden temporär gespeichert und dienen ausschließlich statistischen Zwecken oder zur Verbesserung unseres Angebots.</p>
+
+  <h3>Verwendung von Google Play Store Links</h3>
+  <p>Unsere Website enthält Links zu Apps, die im Google Play Store bereitgestellt werden. Wenn du auf diese Links klickst und eine App herunterlädst oder nutzt, unterliegst du den Datenschutzbestimmungen von Google und den jeweiligen App-Anbietern.</p>
+
+  <h3>Cookies</h3>
+  <p>Unsere Website verwendet keine Cookies, es sei denn, dies wird explizit angegeben.</p>
+
+  <h3>Kontaktaufnahme</h3>
+  <p>Wenn du uns per Kontaktformular oder E-Mail Anfragen sendest, werden deine angegebenen Daten zur Bearbeitung der Anfrage und für mögliche Anschlussfragen gespeichert. Diese Daten geben wir nicht ohne deine Einwilligung weiter.</p>
+
+  <h3>Rechte des Nutzers</h3>
+  <p>Du hast das Recht auf Auskunft über die bei uns gespeicherten personenbezogenen Daten, deren Herkunft und Empfänger sowie den Zweck der Datenverarbeitung. Zudem hast du das Recht auf Berichtigung, Sperrung oder Löschung dieser Daten.</p>
+
+  <h3>Änderungen dieser Datenschutzerklärung</h3>
+  <p>Wir behalten uns das Recht vor, diese Datenschutzerklärung anzupassen, damit sie stets den aktuellen rechtlichen Anforderungen entspricht oder um Änderungen unserer Leistungen umzusetzen. Für deinen erneuten Besuch gilt dann die neue Datenschutzerklärung.</p>
+
+  <p>Bei Fragen zum Datenschutz kannst du dich jederzeit an uns wenden: <a href="mailto:kontakt@solenyx.de">kontakt@solenyx.de</a>.</p>
+</section>
     </main>
 
     <footer>
